<resources>
    <string name="app_name">Total Logix Driver</string>
    <string name="splash">Splash</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget Password?</string>
    <string name="register">Register</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="loading">Loading..</string>
    <string name="language">Language</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="cnic">CNIC</string>
    <string name="reg">Registration No.</string>
    <string name="vahicle_type1">Suzuki</string>
    <string name="vahicle_type2">Riksha</string>
    <string name="registered_email">Registered Email</string>
    <string name="password_reset">Password Reset</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_message">Enter your registered email address ,We will send you an email to reset your password</string>
    <string name="cancel">Cancel</string>
    <string name="Upload_dl">Upload Driving License</string>
    <string name="Upload_cnic">Upload CNIC</string>
    <string name="Upload_reg">Upload Reg:Document</string>
    <string name="reg_doc">Registration Document</string>
    <string name="front">Front</string>
    <string name="back_pic">Back</string>
    <string name="save">Save</string>
    <string name="verify_email">Verify Email</string>
    <string name="title_activity_maps">Map</string>
    <string name="online">you are online</string>
    <string name="user">user</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_completed">Completed Ride</string>
    <string name="menu_cancelled">Cancelled Ride</string>
    <string name="menu_payment">Payment History</string>
    <string name="menu_help">Help</string>
    <string name="menu_logout">Logout</string>

    <string name="ride_count">00</string>
    <string name="earnings">Earnings</string>
    <string name="today">Today</string>
    <string name="todayearning">00</string>
    <string name="this_week">This Week</string>
    <string name="weekearning">00</string>
    <string name="overall">Overall</string>
    <string name="overallearning">00</string>
    <string name="driverOffline">You are Offline</string>
    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>

    <!-- Location Updates -->

    <string name="latitude_label">Latitude</string>
    <string name="longitude_label">Longitude</string>
    <string name="last_update_time_label">Last location update time</string>

    <string name="start_updates">Start updates</string>
    <string name="stop_updates">Stop updates</string>

    <string name="location_settings_inadequate_warning">The location settings on the device are not
        adequate to run this sample. Fix in Settings.</string>

    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="from">FROM</string>
    <string name="sample_from">Novex Dry Cleaners, Asghar Chambers, Jail Road, Hirabad, Hyderabad, Pakistan</string>
    <string name="to">TO</string>
    <string name="arrow">arrow</string>
    <string name="to_address">Zaylabs, Ashar Chambers,Jail Road, Hirabad, Hyderabad, Pakistan</string>
    <string name="distance">Pickup Distance</string>
    <string name="Sample_km_Away">3.67 KM</string>
    <string name="date">Date</string>
    <string name="sample_date">March 7th,2017</string>
    <string name="time">Time</string>
    <string name="sample_time">10:00 PM</string>
    <string name="customer_name">CUSTOMER NAME</string>
    <string name="sample_customer_name">John Doe</string>
    <string name="est_distance">Est: Ride Distance</string>
    <string name="sample_distance">6 KM</string>
    <string name="decline">DECLINE</string>
    <string name="accept">Accept</string>
    <string name="sample_phone">00923332626150</string>
    <string name="weight">Weight</string>
    <string name="cargo_type">Cargo Type</string>
    <string name="cargo_type_sample">Dry Items</string>
    <string name="boxes">Boxes</string>
    <string name="sample_boxes">Less than equal 5</string>
    <string name="_12_kg">12 KG</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Update">Update</string>
    <string name="change_password">Change Password</string>
    <string name="status">Status</string>
    <string name="completed">Completed</string>
    <string name="fare">Fare</string>
    <string name="sample_fare">Rs.800</string>
    <string name="paid_via">Paid Via</string>

    <string name="settlement">Settlement</string>
    <string name="settlement_sample">pending</string>
    <string name="total_distance">Total Distance</string>
    <string name="sample_total_distance">6.5 KM</string>
    <string name="Arrived">Arrived</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="take_payment">Take Payment</string>
    <string name="complete">Complete</string>
    <string name="waiting_time">Waiting Time</string>
    <string name="waiting_time_sample">00:10 Minutes</string>
    <string name="date_time">Date/Time</string>
    <string name="phone_call_content_description">phone call</string>
    <string name="customer_rating">Customer Rating</string>
    <string name="rating">Rating</string>
    <string name="zero">0</string>
    <string name="old_balance">Old Balance</string>
    <string name="updated_balance">Updated Balance</string>
    <string name="new_balance">New Balance</string>
    <string name="transaction_history">Transaction History</string>
    <string name="total_rides">Total Rides</string>
    <string name="cash">Cash</string>
    <string name="earned">Earned</string>
    <string name="total_logix">Total Logix</string>
    <string name="logo">Logo</string>
    <string name="total_earning">Total Earning</string>
    <string name="wallet">Wallet</string>
    <string name="total_logix_id">Total Logix ID</string>
    <string name="total_cash">Total Cash</string>
    <string name="total_fare">Total Fare</string>
    <string name="driver_earning">Driver Earning</string>
    <string name="total_logix_share">Total Logix Share</string>
    <string name="current_logix">Current Logix</string>
    <string name="rupees_Zero">Rs.0</string>


</resources>
