<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@mipmap/ic_home_black_24dp"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/completed_rides"
            android:icon="@mipmap/ic_thumb_up_black_24dp"
            android:title="@string/menu_completed" />
        <item
            android:id="@+id/cancelled"
            android:icon="@mipmap/ic_cancel_black_24dp"
            android:title="@string/menu_cancelled" />
        <item
            android:id="@+id/profile"
            android:icon="@mipmap/ic_account_circle_black_24dp"
            android:title="@string/menu_profile" />

        <item
            android:id="@+id/payment_detail"
            android:icon="@mipmap/ic_payment_black_24dp"
            android:title="@string/menu_payment" />
        <item
            android:id="@+id/help"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_help" />

    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/logout"
                android:icon="@mipmap/ic_power_settings_new_black_24dp"
                android:title="@string/menu_logout" />
        </menu>
    </item>

</menu>
