<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg"
    android:orientation="vertical">

    <TextView android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="@dimen/margin_10"
        android:text="@string/password_reset"
        android:textColor="@color/black"
        android:textSize="@dimen/margin_20"
        android:textStyle="normal" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/black" />

    <TextView android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="@dimen/margin_10"
        android:text="@string/reset_message" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical"
        android:padding="10dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/hint">

            <EditText
                android:id="@+id/etForget"
                android:layout_width="match_parent"
                android:layout_height="@dimen/fourty_five"
                android:layout_margin="@dimen/five"
                android:background="@drawable/rounded_view"
                android:hint="@string/registered_email"
                android:inputType="textEmailAddress"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:textColor="@color/hint"
                android:textColorHint="@color/hint"
                android:textCursorDrawable="@drawable/cursor" />
        </android.support.design.widget.TextInputLayout>


        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_reset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/ronded_button1"
            android:text="@string/reset_password"
            android:textColor="@color/text_color" />


        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/ronded_button1"
            android:text="@string/cancel"
            android:textColor="@color/text_color" />


    </LinearLayout>

</LinearLayout>