<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView

        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="10dp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="true"
        app:contentPadding="0dp">

        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="6dp"
            android:background="@color/white">

            <RelativeLayout
                android:id="@+id/relative_parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/five"
                    android:orientation="horizontal"
                    android:weightSum="0">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_toStartOf="@+id/img_arrow"
                        android:orientation="vertical">


                        <TextView
                            android:id="@+id/from"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start"
                            android:layout_marginStart="5dp"
                            android:gravity="start"
                            android:text="@string/from" />

                        <TextView
                            android:id="@+id/txt_from_add"
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_gravity="start"
                            android:layout_marginStart="@dimen/margin_5"
                            android:layout_weight="1"
                            android:gravity="start"
                            android:maxLines="5"
                            android:padding="1dp"
                            android:text="@string/sample_from" />

                    </LinearLayout>


                    <ImageView
                        android:layout_marginBottom="@dimen/margin_5"
                        android:id="@+id/img_arrow"
                        android:layout_width="@dimen/arrow"
                        android:layout_height="@dimen/arrow"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center"
                        android:src="@drawable/arrow1"
                        android:contentDescription="@string/arrow"
                        />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_toEndOf="@+id/img_arrow"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/to"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"

                            android:gravity="end"
                            android:text="@string/to"
                            tools:gravity="end" />


                        <TextView
                            android:id="@+id/txt_to_add"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_marginEnd="5dp"
                            android:layout_weight="1"
                            android:gravity="end"
                            android:maxLines="5"
                            android:padding="1dp"
                            android:text="@string/to_address"
                            tools:gravity="right|end" />
                    </LinearLayout>


                </RelativeLayout>


            </RelativeLayout>

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/relative_parent"
                android:background="@android:color/darker_gray" />


            <RelativeLayout
                android:id="@+id/R_cnp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/view"
                android:layout_marginTop="@dimen/five"
                android:orientation="horizontal"
                android:weightSum="0">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_toStartOf="@+id/img_detail"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">


                        <TextView

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start"
                            android:layout_marginStart="5dp"
                            android:gravity="start"
                            android:padding="1dp"
                            android:text="@string/distance" />

                        <TextView android:textStyle="bold"
                            android:id="@+id/distancefrom"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start"
                            android:layout_marginStart="5dp"
                            android:gravity="start"
                            android:padding="1dp"
                            android:text="@string/Sample_km_Away" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">


                        <TextView

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start"
                            android:layout_marginStart="5dp"
                            android:gravity="start"
                            android:padding="1dp"
                            android:text="@string/date" />

                        <TextView android:textStyle="bold"
                            android:id="@+id/date"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start"
                            android:layout_marginStart="5dp"
                            android:gravity="start"
                            android:padding="1dp"
                            android:text="@string/sample_date" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start"
                            android:layout_marginStart="5dp"
                            android:gravity="start"
                            android:padding="1dp"
                            android:text="@string/time" />

                        <TextView android:textStyle="bold"
                            android:id="@+id/time"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start"
                            android:layout_marginStart="5dp"
                            android:gravity="start"
                            android:padding="1dp"
                            android:text="@string/sample_time" />
                    </LinearLayout>

                </LinearLayout>


                <ImageView
                    android:layout_marginBottom="@dimen/margin_5"
                    android:id="@+id/img_detail"
                    android:layout_width="@dimen/arrow"
                    android:layout_height="@dimen/arrow"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:src="@drawable/arrow"
                    android:contentDescription="@string/arrow"
                    />

                <LinearLayout
                    android:id="@+id/lcname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_toEndOf="@+id/img_detail"
                    android:orientation="vertical">

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:gravity="end"
                        android:padding="1dp"
                        android:text="@string/customer_name"
                        tools:gravity="end" />


                    <TextView
                        android:id="@+id/txt_customername"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:gravity="end"
                        android:padding="1dp"
                        android:text="@string/sample_customer_name"
                        android:textStyle="bold"
                        tools:gravity="end" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lphone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@+id/lcname"
                    android:orientation="vertical">

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:gravity="end"
                        android:padding="1dp"
                        android:text="@string/phone"
                        tools:gravity="end" />


                    <TextView
                        android:id="@+id/txt_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:gravity="end"
                        android:padding="1dp"
                        android:text="@string/sample_phone"
                        android:textStyle="bold"
                        tools:gravity="end" />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/lride"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@+id/lphone"
                    android:orientation="vertical">

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:gravity="end"
                        android:padding="1dp"
                        android:text="@string/est_distance"
                        tools:gravity="end" />


                    <TextView
                        android:id="@+id/txt_est_distance"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:gravity="end"
                        android:padding="1dp"
                        android:text="@string/sample_distance"
                        android:textStyle="bold"
                        tools:gravity="end" />
                </LinearLayout>

            </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/R_cnp"
            android:paddingTop="@dimen/margin_15"
            android:paddingBottom="@dimen/margin_15"
            >
            <Button
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:id="@+id/declinebtn"
                android:layout_marginStart="70dp"
                android:text="@string/decline"
                android:textAlignment="center"
                android:background="@color/red"
                />
            <Button

                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:id="@+id/acceptbtn"
                android:layout_marginStart="200dp"
                android:text="@string/accept"
                android:textAlignment="center"
                android:background="@color/green"
                />
        </RelativeLayout>
        </RelativeLayout>

    </android.support.v7.widget.CardView>


</LinearLayout>