<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/cardview_totalride"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_height"
        app:cardCornerRadius="10dp"
        app:cardUseCompatPadding="true"
        app:contentPadding="5dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_total_rides"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:text="@string/total_rides"
                android:textSize="@dimen/margin_20" />

            <TextView
                android:id="@+id/txt_total_ridecount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/twelve"
                android:gravity="center_horizontal"
                android:text="@string/ride_count"
                android:textSize="@dimen/margin_20" />


        </LinearLayout>
    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:id="@+id/earnings"
        android:layout_width="match_parent"
        android:layout_height="@dimen/one_thirty"
        android:layout_below="@+id/cardview_totalride"
        android:layout_marginTop="0dp"
        app:cardCornerRadius="10dp"
        app:cardUseCompatPadding="true"
        app:contentPadding="5dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_earnings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:text="@string/earnings"
                android:textSize="@dimen/margin_20" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/twelve"
                android:layout_marginTop="@dimen/five"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:gravity="start"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cash"
                        android:textSize="@dimen/margin_20" />

                    <TextView
                        android:id="@+id/txt_cash"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/five"
                        android:text="0000"
                        android:textSize="@dimen/margin_20" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total_logix"
                        android:textSize="@dimen/margin_20" />

                    <TextView
                        android:id="@+id/txt_totallogix"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/five"
                        android:text="0000"
                        android:textSize="@dimen/margin_20" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:gravity="end"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/earned"
                        android:textSize="@dimen/margin_20" />

                    <TextView
                        android:id="@+id/txt_earned"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/five"
                        android:text="0000"
                        android:textSize="@dimen/margin_20" />

                </LinearLayout>

            </FrameLayout>


        </LinearLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>